--- a/Develop/client/index.html
+++ b/Develop/client/index.html
@@ -1,42 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous"
+  >
   <title>Weather Dashboard</title>
 </head>
 
 <body>
-  <header class="container-fluid text-center text-white bg-dark p-1 weather-header">
+  <header class="container-fluid text-center text-white bg-dark p-1">
     <h1>Weather Dashboard</h1>
   </header>
 
-  <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 1400px">
+  <div class="container-fluid" style="max-width: 1400px;">
     <div class="row">
       <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
+        <h2 id="form-heading" class="h3">Search for a City:</h2>
         <form id="search-form" class="form">
-          <div class="form-inline form-group">
+          <div class="form-group">
             <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="San Diego"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
+              <input
+                class="form-input weather-search"
+                type="text"
+                id="search-input"
+                placeholder="Toronto"
+                aria-labelledby="form-heading"
+                aria-controls="today forecast"
+              />
               <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
+                <button
+                  type="submit"
+                  class="btn search-button"
+                  id="search-button"
+                  aria-label="submit search"
+                >
                   Search
                 </button>
-                <hr class="hr weather-hr" />
+                <hr class="weather-hr" />
               </div>
             </div>
           </div>
         </form>
-        <div class="list-group row mt-2" id="history"></div>
+        <div class="list-group mt-2" id="history"></div>
       </aside>
 
       <div class="col-lg-9 pb-3">
@@ -45,7 +56,7 @@
             <div class="card-body" id="today">
               <h2 class="card-title" id="search-title">
                 Search for a city!
-                <img id="weather-img" class="weather-img">
+                <img id="weather-img" class="weather-img" alt="Weather icon"/>
               </h2>
               <p class="card-text" id="temp">Temperature: °F</p>
               <p class="card-text" id="wind">Wind: MPH</p>
@@ -57,7 +68,7 @@
       </div>
     </div>
   </div>
-  <script type="module" src="/src/main.ts"></script>
+  
+  <script type="module" src="./src/main.ts"></script>
 </body>
-
 </html>
